--- a/src/components/SongBird.scss
+++ b/src/components/SongBird.scss
@@ -140,6 +140,9 @@
             p {
                 margin: 0;
             }
+            .description {
+                margin-top: 26px;
+            }
         }
     }
     button {
@@ -156,5 +159,104 @@
         margin-bottom: 25px;
         line-height: 1.5;
         outline: none;
+    }
+}
+
+.media {
+    video {
+        display: none;
+    }
+    &-controls {
+        padding-top: 25px;
+        .play,
+        .controls {
+            display: flex;
+        }
+        .controls {
+            margin-top: 5px;
+            justify-content: space-between;
+        }
+        .media-control--current-time {
+            margin-right: 15px;
+            font-size: 11px;
+        }
+        .media-control--duration {
+            font-size: 11px;
+        }
+        .media-control--play-pause {
+            width: 35px;
+            height: 35px;
+            min-width: 35px;
+            border: 2px solid #00bc8c;
+            border-radius: 50%;
+            border: 2px solid #00bc8c;
+            color: transparent;
+            cursor: pointer;
+            margin-top: -15px;
+        }
+        input[type="range"] {
+            -webkit-appearance: none;
+
+            width: 100%;
+            height: 12px;
+            padding: 0 12px;
+            margin: 0;
+            background-color: transparent;
+            outline: none;
+
+            &:hover,
+            &:active {
+                &::-webkit-slider-thumb {
+                    transform: scale(1.25);
+                }
+            }
+            &::-webkit-slider-runnable-track {
+                width: 100%;
+                height: 4px;
+                border: 0;
+                cursor: pointer;
+                background-color: #808080;
+
+                background: {
+                    image: linear-gradient(#0c9975, #0c9975);
+                    size: inherit;
+                    repeat: no-repeat;
+                }
+
+                &:active {
+                    cursor: pointer;
+                }
+            }
+
+            &::-webkit-slider-container {
+                background-size: inherit;
+            }
+
+            &::-webkit-slider-thumb::before {
+                background-color: #0c9975;
+            }
+
+            &::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                width: 16px;
+                height: 16px;
+                border: 0;
+                border-radius: 50%;
+                background: #808080;
+                cursor: pointer;
+                transform: scale(1);
+                transform-origin: 50% 50%;
+                transition: transform 150ms ease-out;
+                position: relative;
+                margin-top: -6px;
+
+                &:active {
+                    cursor: pointer;
+                }
+            }
+        }
+        input[type="range"].media-control--volume {
+            width: 100px;
+        }
     }
 }
