--- a/src/components/SongBird.scss
+++ b/src/components/SongBird.scss
@@ -38,8 +38,10 @@
         background-color: #303030;
         padding: 16px;
         border: 1px solid #444;
-        &-image {
+        img {
             border-radius: 10px;
+            max-width: 200px;
+            height: 155px;
         }
         &-example {
             padding-left: 40px;
@@ -159,6 +161,12 @@
         margin-bottom: 25px;
         line-height: 1.5;
         outline: none;
+        &.next-level {
+            background-color: #008966;
+            &:hover {
+                background-color: #00bc8c;
+            }
+        }
     }
 }
 
