feat: add responsive layout

--- a/src/components/SongBird.scss
+++ b/src/components/SongBird.scss
@@ -10,19 +10,23 @@
     }
 }
 .selection {
+    display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
     width: 100%;
-    overflow: hidden;
     margin: 8px 0 25px 0;
-    border-radius: 5px;
     padding: 0;
+    background-color: #008966;
+    border-radius: 5px;
+    overflow: hidden;
     li {
-        display: inline-block;
-        width: calc(100% / 6);
+        box-sizing: border-box;
+        flex: auto;
+        list-style: none;
         text-align: center;
         background-color: #008966;
         border-color: #007c5d;
-        padding: 6px 0;
+        padding: 6px 6px;
         cursor: pointer;
         &.active {
             background-color: #00bc8c;
@@ -122,6 +126,7 @@
                     display: inline-block;
                     width: 200px;
                     height: 155px;
+                    border-radius: 5px;
                 }
                 .name {
                     font-family: "Lato", "Segoe UI", Arial, sans-serif;
@@ -136,7 +141,6 @@
                     font-size: 15px;
                     padding: 4px;
                     min-height: 26px;
-                    width: 100%;
                 }
             }
             p {
@@ -170,101 +174,53 @@
     }
 }
 
-.media {
-    video {
-        display: none;
-    }
-    &-controls {
-        padding-top: 25px;
-        .play,
-        .controls {
-            display: flex;
-        }
-        .controls {
-            margin-top: 5px;
-            justify-content: space-between;
-        }
-        .media-control--current-time {
-            margin-right: 15px;
-            font-size: 11px;
-        }
-        .media-control--duration {
-            font-size: 11px;
-        }
-        .media-control--play-pause {
-            width: 35px;
-            height: 35px;
-            min-width: 35px;
-            border: 2px solid #00bc8c;
-            border-radius: 50%;
-            border: 2px solid #00bc8c;
-            color: transparent;
-            cursor: pointer;
-            margin-top: -15px;
-        }
-        input[type="range"] {
-            -webkit-appearance: none;
-
+@media screen and (max-width: 850px) {
+    .quiz__question {
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        &-selection {
             width: 100%;
-            height: 12px;
-            padding: 0 12px;
-            margin: 0;
-            background-color: transparent;
-            outline: none;
+            margin: 16px;
+        }
+        &-example {
+            width: 100%;
+            margin: 25px 0;
+            padding: 16px;
+            box-sizing: border-box;
+        }
+    }
+}
 
-            &:hover,
-            &:active {
-                &::-webkit-slider-thumb {
-                    transform: scale(1.25);
-                }
+@media screen and (max-width: 460px) {
+    .quiz {
+        &__answer {
+            flex-direction: column;
+            align-items: center;
+            &-example {
+                padding-left: 0;
             }
-            &::-webkit-slider-runnable-track {
-                width: 100%;
-                height: 4px;
-                border: 0;
-                cursor: pointer;
-                background-color: #808080;
-
-                background: {
-                    image: linear-gradient(#0c9975, #0c9975);
-                    size: inherit;
-                    repeat: no-repeat;
-                }
-
-                &:active {
-                    cursor: pointer;
-                }
-            }
-
-            &::-webkit-slider-container {
-                background-size: inherit;
-            }
-
-            &::-webkit-slider-thumb::before {
-                background-color: #0c9975;
-            }
-
-            &::-webkit-slider-thumb {
-                -webkit-appearance: none;
-                width: 16px;
-                height: 16px;
-                border: 0;
-                border-radius: 50%;
-                background: #808080;
-                cursor: pointer;
-                transform: scale(1);
-                transform-origin: 50% 50%;
-                transition: transform 150ms ease-out;
-                position: relative;
-                margin-top: -6px;
-
-                &:active {
-                    cursor: pointer;
-                }
+            .name {
+                margin-top: 25px;
+                text-align: center;
             }
         }
-        input[type="range"].media-control--volume {
-            width: 100px;
+        &__question {
+            &-example {
+                .bird {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 100%;
+                }
+                .name {
+                    margin-top: 25px;
+                    text-align: center;
+                }
+                .species {
+                    text-align: center;
+                }
+            }
         }
     }
 }
