--- a/src/components/GameEnd.scss
+++ b/src/components/GameEnd.scss
@@ -41,3 +41,14 @@
         }
     }
 }
+
+@media screen and (max-width: 700px) {
+    .game-end {
+        h1 {
+            font-size: 40px;
+            margin: 0;
+            font-weight: 300;
+            line-height: 1.2;
+        }
+    }
+}
