--- a/src/components/GameEnd.scss
+++ b/src/components/GameEnd.scss
@@ -6,15 +6,6 @@
     padding: 64px 32px;
     background-color: #303030;
     border-radius: 5px;
-    z-index: 1;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-blend-mode: soft-light;
-    background-size: cover;
-    background-position: center center;
     h1 {
         font-size: 72px;
         margin: 0;
@@ -49,157 +40,27 @@
             background-color: #00bc8c;
         }
     }
-    img {
+    .win-image {
+        margin-top: 20px;
         max-width: 280px;
-    }
-
-    .bird-animation {
-        background-image: url(/assets/img/bird-animation.svg);
-        background-size: auto 100%;
-        width: 88px;
-        height: 125px;
-        will-change: background-position;
-        filter: invert(38%) sepia(12%) saturate(6882%) hue-rotate(134deg) brightness(90%) contrast(101%);
-
-        animation-name: fly-cycle;
-        animation-timing-function: steps(10);
-        animation-iteration-count: infinite;
-
-        &--one {
-            animation-duration: 1s;
-            animation-delay: -0.5s;
-        }
-
-        &--two {
-            animation-duration: 0.9s;
-            animation-delay: -0.75s;
-        }
-
-        &--three {
-            animation-duration: 1.25s;
-            animation-delay: -0.25s;
-        }
-
-        &--four {
-            animation-duration: 1.1s;
-            animation-delay: -0.5s;
-        }
-    }
-
-    .bird-container {
-        position: absolute;
-        top: -5%;
-        left: -10%;
-        transform: scale(0) translateX(-10vw);
-        will-change: transform;
-
-        animation-name: fly-right-one;
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-
-        &--one {
-            animation-duration: 15s;
-            animation-delay: 0;
-        }
-
-        &--two {
-            animation-duration: 16s;
-            animation-delay: 1s;
-        }
-
-        &--three {
-            animation-duration: 14.6s;
-            animation-delay: 9.5s;
-        }
-
-        &--four {
-            animation-duration: 16s;
-            animation-delay: 10.25s;
-        }
+        animation: move 3s ease-in-out infinite;
     }
 }
 
-@media screen and (max-width: 700px) {
-    .game-end {
-        h1 {
-            font-size: 40px;
-            margin: 0;
-            font-weight: 300;
-            line-height: 1.2;
-        }
-    }
-}
-
-@keyframes fly-cycle {
-    100% {
-        background-position: -900px 0;
-    }
-}
-
-@keyframes fly-right-one {
+@keyframes move {
     0% {
-        transform: scale(0.3) translateX(-10vw);
+        transform: translate(0, 20px);
     }
-
-    10% {
-        transform: translateY(2vh) translateX(10vw) scale(0.4);
+    25% {
+        transform: translate(60px, -10px);
     }
-
-    20% {
-        transform: translateY(0vh) translateX(30vw) scale(0.5);
-    }
-
-    30% {
-        transform: translateY(4vh) translateX(50vw) scale(0.6);
-    }
-
-    40% {
-        transform: translateY(2vh) translateX(70vw) scale(0.6);
-    }
-
     50% {
-        transform: translateY(0vh) translateX(90vw) scale(0.6);
+        transform: translate(0, 20px);
     }
-
-    60% {
-        transform: translateY(0vh) translateX(110vw) scale(0.6);
+    75% {
+        transform: translate(-60px, -10px);
     }
-
     100% {
-        transform: translateY(0vh) translateX(110vw) scale(0.6);
-    }
-}
-
-@keyframes fly-right-two {
-    0% {
-        transform: translateY(-2vh) translateX(-10vw) scale(0.5);
-    }
-
-    10% {
-        transform: translateY(0vh) translateX(10vw) scale(0.4);
-    }
-
-    20% {
-        transform: translateY(-4vh) translateX(30vw) scale(0.6);
-    }
-
-    30% {
-        transform: translateY(1vh) translateX(50vw) scale(0.45);
-    }
-
-    40% {
-        transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
-    }
-
-    50% {
-        transform: translateY(0vh) translateX(90vw) scale(0.45);
-    }
-
-    51% {
-        transform: translateY(0vh) translateX(110vw) scale(0.45);
-    }
-
-    100% {
-        transform: translateY(0vh) translateX(110vw) scale(0.45);
+        transform: translate(0, 20px);
     }
 }
