fix: fix styles

--- a/src/components/GameEnd.scss
+++ b/src/components/GameEnd.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 64px 32px;
+    padding: 64px 32px 10px 32px;
     background-color: #303030;
     border-radius: 5px;
     h1 {
@@ -42,8 +42,16 @@
     }
     .win-image {
         margin-top: 20px;
-        max-width: 280px;
+        max-width: 200px;
         animation: move 3s ease-in-out infinite;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .game-end {
+        h1 {
+            font-size: 46px;
+        }
     }
 }
 
@@ -52,13 +60,13 @@
         transform: translate(0, 20px);
     }
     25% {
-        transform: translate(60px, -10px);
+        transform: translate(40px, -10px);
     }
     50% {
         transform: translate(0, 20px);
     }
     75% {
-        transform: translate(-60px, -10px);
+        transform: translate(-40px, -10px);
     }
     100% {
         transform: translate(0, 20px);
